--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,12 +29,80 @@
                 </li>
             </ul>
         </nav>
-            <address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
+    <main>
+        <section>
+            <nav>
+                <ul>
+                    <li><button type="button"></button>All</li>
+                    <li><button type="button"></button>Web Site</li>
+                    <li><button type="button"></button>App</li>
+                    <li><button type="button"></button>Design</li>
+                    <li><button type="button"></button>Marketing</li>
+                </ul>
+            </nav>
+            <h1></h1>
+            <ul>
+                <li>
+                    <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
+                    <h2>Banking App Interface Concept</h2>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio2.jpg width=" 360" height="300" alt="Cashless Payment">
+                    <h2>Cashless Payment</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App">
+                    <h2>Meditation App</h2>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service">
+                    <h2>Taxi Service</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations">
+                    <h2>Screen Illustrations</h2>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses">
+                    <h2>Online Courses</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio7.jpg" width="360" height="300" alt="Instagram">
+                    <h2>Instagram Stories Concept</h2>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio8.jpg" width="360" height="300" alt="Organic Food">
+                    <h2>Organic Food</h2>
+                    <p>Web Site</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio9.jpg" width="360" height="300" alt="Fresh Coffee">
+                    <h2>Fresh Coffee</h2>
+                    <p>Web Site</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="./index.html">Web<span>Studio</span></a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
+
 </html>
