--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <nav>
             <a href="./index.html">Web<span class="navigation">Studio</span></a>
-            <ul>
-                <li>
+            <ul class="menu">
+                <li class="menu-nav">
                     <a href="./index.html">Studio</a>
                 </li>
                 <li>
