--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <a href="./index.html">Web<span class="navigation">Studio</span></a>
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="./index.html">Studio</a>
                 </li>
