--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">Web<span class="navigation">Studio</span></a>
+            <a href="./index.html"><img src="./images/Logo.svg" class="logo" alt="logo"></a>
             <ul class="menu">
                 <li>
                     <a href="./index.html">Studio</a>
