--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">Web<span class="navigation">Studio</span></a>
+            <a href="./index.html"><img src="./images/Logo.svg" class="logo" alt="logo"></a>
             <ul class="menu">
                 <li class="menu-nav">
                     <a href="./index.html">Studio</a>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
