--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"><img src="./images/Logo.svg" class="logo" alt="logo"></a>
+            <a href="./index.html">Web<span class="logotip">Studio</span></a>
             <ul class="menu">
                 <li>
                     <a href="./index.html">Studio</a>
@@ -29,15 +29,15 @@
                 </li>
             </ul>
         </nav>
-        <address class="list">
-            <ul>
+        <address>
+            <ul class="list">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
+        <section class="Knopki">
             <nav>
                 <ul>
                     <li><button type="button"></button>All</li>
@@ -97,8 +97,8 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">Web<span>Studio</span></a>
+    <footer class="back">
+        <a href="./index.html">Web<span class="logotip">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
