--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">Web<span class="logotip">Studio</span></a>
-            <ul class="menu">
+            <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+            <ul class="list">
                 <li class="menu-nav">
                     <a href="./index.html">Studio</a>
                 </li>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html">Web<span class="logotip">Studio</span></a>
+        <a class="logotip" href="./index.html">Web<span>Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
