--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">Web<span class="logotip">Studio</span></a>
-            <ul class="menu">
+            <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+            <ul class="list">
                 <li>
                     <a href="./index.html">Studio</a>
                 </li>
@@ -39,15 +39,15 @@
     <main>
         <section class="Knopki">
             <nav>
-                <ul>
-                    <li><button type="button"></button>All</li>
+                <ul class="list">
+                    <li class=""><button type="button"></button>All</li>
                     <li><button type="button"></button>Web Site</li>
                     <li><button type="button"></button>App</li>
                     <li><button type="button"></button>Design</li>
                     <li><button type="button"></button>Marketing</li>
                 </ul>
             </nav>
-            <h1></h1>
+            <h1>Portfolio</h1>
             <ul>
                 <li>
                     <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
@@ -55,7 +55,7 @@
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio2.jpg width=" 360" height="300" alt="Cashless Payment">
+                    <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment">
                     <h2>Cashless Payment</h2>
                     <p>Marketing</p>
                 </li>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html">Web<span class="logotip">Studio</span></a>
+        <a class="logotip" href="./index.html">Web<span>Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
