--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+            <a href="./index.html" class="logotip">Web<span>Studio</span></a>
             <ul class="list">
                 <li class="menu-nav">
                     <a href="./index.html">Studio</a>
@@ -98,10 +98,9 @@
         </section>
     </main>
     <footer class="back">
-        <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+        <a href="./index.html" class="logotip">Web<span>Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-
 
 </body>
 
