--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+            <a href="./index.html" class="logotip">Web<span>Studio</span></a>
             <ul class="list">
                 <li>
                     <a href="./index.html">Studio</a>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="back">
-        <a class="logotip" href="./index.html">Web<span>Studio</span></a>
+        <a href="./index.html" class="logotip">Web<span>Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
