--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logotip">Web<span>Studio</span></a>
+            <a href="./index.html" class="link">Web<span class="logo">Studio</span></a>
             <ul class="list">
                 <li class="menu-nav">
                     <a href="./index.html">Studio</a>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="logotip">Web<span>Studio</span></a>
+        <a href="./index.html" class="link">Web<span class="logo">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
