--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-        <section>
+        <section class="link">
             <h2>Our advantages</h2>
             <ul>
                 <li>
