--- a/portfolio.html
+++ b/portfolio.html
@@ -38,17 +38,17 @@
     </header>
     <main>
         <section class="Knopki">
+            <h1>bestportfolio</h1>
             <nav>
                 <ul class="list">
-                    <li class=""><button type="button"></button>All</li>
-                    <li><button type="button"></button>Web Site</li>
-                    <li><button type="button"></button>App</li>
-                    <li><button type="button"></button>Design</li>
-                    <li><button type="button"></button>Marketing</li>
+                    <li><button type="button" class="button">All</button></li>
+                    <li><button type="button" class="button2">Web Site</button></li>
+                    <li><button type="button">App</button></li>
+                    <li><button type="button">Design</button></li>
+                    <li><button type="button">Marketing</button></li>
                 </ul>
             </nav>
-            <h1>Portfolio</h1>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
                     <h2>Banking App Interface Concept</h2>
