--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <section class="Knopki">
-            <h1>bestportfolio</h1>
+            <h1>Bestportfolio</h1>
             <nav>
                 <ul class="list">
                     <li><button type="button" class="button">All</button></li>
