--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
     </main>
     <footer class="back">
         <a href="./index.html" class="link">Web<span class="logo">Studio</span></a>
-        <p>
+        <p class="text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
