--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="link">Web<span class="logo">Studio</span></a>
+        <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
         <p class="text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
