--- a/portfolio.html
+++ b/portfolio.html
@@ -37,17 +37,15 @@
         </address>
     </header>
     <main>
-        <section class="Knopki">
+        <section>
             <h1>Bestportfolio</h1>
-            <nav>
                 <ul class="list">
                     <li><button type="button" class="button">All</button></li>
-                    <li><button type="button" class="button2">Web Site</button></li>
-                    <li><button type="button">App</button></li>
-                    <li><button type="button">Design</button></li>
-                    <li><button type="button">Marketing</button></li>
+                    <li><button type="button" class="button-two">Web Site</button></li>
+                    <li><button type="button" class="button-tree">App</button></li>
+                    <li><button type="button" class="button-four">Design</button></li>
+                    <li><button type="button" class="button-five">Marketing</button></li>
                 </ul>
-            </nav>
             <ul class="list">
                 <li>
                     <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
