--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
+            <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
             <ul class="list">
                 <li class="menu-nav">
                     <a href="./index.html">Studio</a>
