--- a/portfolio.html
+++ b/portfolio.html
@@ -16,23 +16,23 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
+            <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
             <ul class="list">
-                <li>
-                    <a href="./index.html">Studio</a>
+                <li class="link">
+                    <a href="./index.html" class="main-one">Studio</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Portfolio</a>
+                    <a href="./portfolio.html" class="main-two">Portfolio</a>
                 </li>
                 <li>
-                    <a href="./Contacts.html">Contacts</a>
+                    <a href="" class="main-tree">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="adress">
             <ul class="list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="link"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+                <li class="link"><a href="tel:+110001111111" class="mail">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
