--- a/portfolio.html
+++ b/portfolio.html
@@ -39,58 +39,58 @@
     <main>
         <section>
             <h1>Bestportfolio</h1>
-                <ul class="list">
-                    <li><button type="button" class="button">All</button></li>
-                    <li><button type="button" class="button-two">Web Site</button></li>
-                    <li><button type="button" class="button-tree">App</button></li>
-                    <li><button type="button" class="button-four">Design</button></li>
-                    <li><button type="button" class="button-five">Marketing</button></li>
-                </ul>
             <ul class="list">
-                <li>
+                <li><button type="button" class="button">All</button></li>
+                <li><button type="button" class="button">Web Site</button></li>
+                <li><button type="button" class="button">App</button></li>
+                <li><button type="button" class="button">Design</button></li>
+                <li><button type="button" class="button">Marketing</button></li>
+            </ul>
+            <ul class="list">
+                <li class="link">
                     <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
-                    <h2>Banking App Interface Concept</h2>
-                    <p>App</p>
+                    <h2 class="smm">Banking App Interface Concept</h2>
+                    <p class="paragraph">App</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment">
-                    <h2>Cashless Payment</h2>
-                    <p>Marketing</p>
+                    <h2 class="smm">Cashless Payment</h2>
+                    <p class="paragraph">Marketing</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App">
-                    <h2>Meditation App</h2>
-                    <p>App</p>
+                    <h2 class="smm">Meditation App</h2>
+                    <p class="paragraph">App</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service">
-                    <h2>Taxi Service</h2>
-                    <p>Marketing</p>
+                    <h2 class="smm">Taxi Service</h2>
+                    <p class="paragraph">Marketing</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations">
-                    <h2>Screen Illustrations</h2>
-                    <p>Design</p>
+                    <h2 class="smm">Screen Illustrations</h2>
+                    <p class="paragraph">Design</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses">
-                    <h2>Online Courses</h2>
-                    <p>Marketing</p>
+                    <h2 class="smm">Online Courses</h2>
+                    <p class="paragraph">Marketing</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio7.jpg" width="360" height="300" alt="Instagram">
-                    <h2>Instagram Stories Concept</h2>
-                    <p>Design</p>
+                    <h2 class="smm">Instagram Stories Concept</h2>
+                    <p class="paragraph">Design</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio8.jpg" width="360" height="300" alt="Organic Food">
-                    <h2>Organic Food</h2>
-                    <p>Web Site</p>
+                    <h2 class="smm">Organic Food</h2>
+                    <p class="paragraph">Web Site</p>
                 </li>
-                <li>
+                <li class="link">
                     <img src="./images/portfolio9.jpg" width="360" height="300" alt="Fresh Coffee">
-                    <h2>Fresh Coffee</h2>
-                    <p>Web Site</p>
+                    <h2 class="smm">Fresh Coffee</h2>
+                    <p class="paragraph">Web Site</p>
                 </li>
             </ul>
         </section>
