--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <nav>
             <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
             <ul class="list">
-                <li class="menu-nav">
-                    <a href="./index.html">Studio</a>
+                <li>
+                    <a href="./index.html" class="link">Studio</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Portfolio</a>
+                    <a href="./portfolio.html" class="link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="./Contacts.html">Contacts</a>
+                    <a href="./Contacts.html" class="link">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
