--- a/portfolio.html
+++ b/portfolio.html
@@ -19,20 +19,20 @@
             <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
             <ul class="list">
                 <li class="link">
-                    <a href="./index.html" class="main-one">Studio</a>
+                    <a href="./index.html" class="main-one" class="link">Studio</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html" class="main-two">Portfolio</a>
+                    <a href="./portfolio.html" class="main-one" class="link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="" class="main-tree">Contacts</a>
+                    <a href="" class="main-one" class="link" >Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="adress">
             <ul class="list">
-                <li class="link"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-                <li class="link"><a href="tel:+110001111111" class="mail">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="mail" class="link">info@devstudio.com</a></li>
+                <li class="link"><a href="tel:+110001111111" class="mail" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
