--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="./portfolio.html" class="link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="./Contacts.html" class="link">Contacts</a>
+                    <a href="" class="link">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -37,10 +37,10 @@
         </address>
     </header>
     <main>
-        <section>
+        <section class="section">
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="Button-two">Order Service</button>
         </section>
         <section class="link">
             <h2>Our advantages</h2>
