--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
     </main>
     <footer class="back">
         <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
     </footer>
 
 </body>
