--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
         <section>
             <h1>Bestportfolio</h1>
             <ul class="list">
-                <li><button type="button" class="button">All</button></li>
-                <li><button type="button" class="button">Web Site</button></li>
-                <li><button type="button" class="button">App</button></li>
-                <li><button type="button" class="button">Design</button></li>
-                <li><button type="button" class="button">Marketing</button></li>
+                <li><button type="button" class="button link">All</button></li>
+                <li><button type="button" class="button link">Web Site</button></li>
+                <li><button type="button" class="button link">App</button></li>
+                <li><button type="button" class="button link">Design</button></li>
+                <li><button type="button" class="button link ">Marketing</button></li>
             </ul>
             <ul class="list">
                 <li class="link">
