--- a/portfolio.html
+++ b/portfolio.html
@@ -47,48 +47,48 @@
                 <li><button type="button" class="button link ">Marketing</button></li>
             </ul>
             <ul class="list">
-                <li class="link">
-                    <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App"></a>
                     <h2 class="smm">Banking App Interface Concept</h2>
                     <p class="paragraph">App</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment"></a>
                     <h2 class="smm">Cashless Payment</h2>
                     <p class="paragraph">Marketing</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App"></a>
                     <h2 class="smm">Meditation App</h2>
                     <p class="paragraph">App</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service"></a>
                     <h2 class="smm">Taxi Service</h2>
                     <p class="paragraph">Marketing</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations"></a>
                     <h2 class="smm">Screen Illustrations</h2>
                     <p class="paragraph">Design</p>
                 </li>
                 <li class="link">
-                    <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses">
+                    <a href="" class="link"><img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses"></a>
                     <h2 class="smm">Online Courses</h2>
                     <p class="paragraph">Marketing</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio7.jpg" width="360" height="300" alt="Instagram">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio7.jpg" width="360" height="300" alt="Instagram"></a>
                     <h2 class="smm">Instagram Stories Concept</h2>
                     <p class="paragraph">Design</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio8.jpg" width="360" height="300" alt="Organic Food">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio8.jpg" width="360" height="300" alt="Organic Food"></a>
                     <h2 class="smm">Organic Food</h2>
                     <p class="paragraph">Web Site</p>
                 </li>
-                <li class="link">
-                    <img src="./images/portfolio9.jpg" width="360" height="300" alt="Fresh Coffee">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio9.jpg" width="360" height="300" alt="Fresh Coffee"></a>
                     <h2 class="smm">Fresh Coffee</h2>
                     <p class="paragraph">Web Site</p>
                 </li>
@@ -102,5 +102,5 @@
         </p>
     </footer>
 </body>
-
+ 
 </html>
