--- a/portfolio.html
+++ b/portfolio.html
@@ -14,93 +14,104 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
-            <ul class="list">
-                <li class="link">
-                    <a href="./index.html" class="link">Studio</a>
+    <header class="header">
+        <nav id="header-nav">
+            <a href="./index.html" class="header-logo link">Web<span class="header-logo-span">Studio</span></a>
+            <ul class="header-menu">
+                <li class="header-menu-item">
+                    <a href="./index.html" class="header-menu-link link">Studio</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html" class="link">Portfolio</a>
+                <li class="header-menu-item">
+                    <a href="./portfolio.html" class="header-menu-link link ">Portfolio</a>
                 </li>
-                <li>
-                    <a href="" class="link">Contacts</a>
+                <li class="header-menu-item">
+                    <a href="" class="header-menu-link link ">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address class="adress">
+        <address class="contacts">
             <ul class="list">
-                <li class="link"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-                <li class="link"><a href="tel:+110001111111" class="mail">+11 (000) 111-11-11</a></li>
+                <li class="contacts-item"><a href="mailto:info@devstudio.com"
+                        class="contacts-link link list">info@devstudio.com</a></li>
+                <li class="contacts-item"><a href="tel:+110001111111" class="contacts-link link list">+11 (000)
+                        111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section>
-            <h1>Bestportfolio</h1>
+            <h1 hidden>Bestportfolio</h1>
             <ul class="list">
-                <li><button type="button" class="button link">All</button></li>
-                <li><button type="button" class="button link">Web Site</button></li>
-                <li><button type="button" class="button link">App</button></li>
-                <li><button type="button" class="button link">Design</button></li>
-                <li><button type="button" class="button link ">Marketing</button></li>
+                <li><button type="button" class="prtfl-btn">All</button></li>
+                <li><button type="button" class="prtfl-btn">Web Site</button></li>
+                <li><button type="button" class="prtfl-btn">App</button></li>
+                <li><button type="button" class="prtfl-btn">Design</button></li>
+                <li><button type="button" class="prtfl-btn">Marketing</button></li>
             </ul>
             <ul class="list">
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App"></a>
-                    <h2 class="smm">Banking App Interface Concept</h2>
-                    <p class="paragraph">App</p>
+                    <a href="" class="link"><img src="./images/portfolio1.jpg" width="360" height="300"
+                            alt="Banking App"></a>
+                    <h2 class="scnd-ttl-pf">Banking App Interface Concept</h2>
+                    <p class="text-pf">App</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment"></a>
-                    <h2 class="smm">Cashless Payment</h2>
-                    <p class="paragraph">Marketing</p>
+                    <a href="" class="link"><img src="./images/portfolio2.jpg" width="360" height="300"
+                            alt="Cashless Payment"></a>
+                    <h2 class="scnd-ttl-pf">Cashless Payment</h2>
+                    <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App"></a>
-                    <h2 class="smm">Meditation App</h2>
-                    <p class="paragraph">App</p>
+                    <a href="" class="link"><img src="./images/portfolio3.jpg" width="360" height="300"
+                            alt="Meditation App"></a>
+                    <h2 class="scnd-ttl-pf">Meditation App</h2>
+                    <p class="text-pf">App</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service"></a>
-                    <h2 class="smm">Taxi Service</h2>
-                    <p class="paragraph">Marketing</p>
+                    <a href="" class="link"><img src="./images/portfolio4.jpg" width="360" height="300"
+                            alt="Taxi Service"></a>
+                    <h2 class="scnd-ttl-pf">Taxi Service</h2>
+                    <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations"></a>
-                    <h2 class="smm">Screen Illustrations</h2>
-                    <p class="paragraph">Design</p>
+                    <a href="" class="link"><img src="./images/portfolio5.jpg" width="360" height="300"
+                            alt="Screen Illustrations"></a>
+                    <h2 class="scnd-ttl-pf">Screen Illustrations</h2>
+                    <p class="text-pf">Design</p>
                 </li>
                 <li class="link">
-                    <a href="" class="link"><img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses"></a>
-                    <h2 class="smm">Online Courses</h2>
-                    <p class="paragraph">Marketing</p>
+                    <a href="" class="link"><img src="./images/portfolio6.jpg" width="360" height="300"
+                            alt="Online Courses"></a>
+                    <h2 class="scnd-ttl-pf">Online Courses</h2>
+                    <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio7.jpg" width="360" height="300" alt="Instagram"></a>
-                    <h2 class="smm">Instagram Stories Concept</h2>
-                    <p class="paragraph">Design</p>
+                    <a href="" class="link"><img src="./images/portfolio7.jpg" width="360" height="300"
+                            alt="Instagram"></a>
+                    <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
+                    <p class="text-pf">Design</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio8.jpg" width="360" height="300" alt="Organic Food"></a>
-                    <h2 class="smm">Organic Food</h2>
-                    <p class="paragraph">Web Site</p>
+                    <a href="" class="link"><img src="./images/portfolio8.jpg" width="360" height="300"
+                            alt="Organic Food"></a>
+                    <h2 class="scnd-ttl-pf">Organic Food</h2>
+                    <p class="text-pf">Web Site</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio9.jpg" width="360" height="300" alt="Fresh Coffee"></a>
-                    <h2 class="smm">Fresh Coffee</h2>
-                    <p class="paragraph">Web Site</p>
+                    <a href="" class="link"><img src="./images/portfolio9.jpg" width="360" height="300"
+                            alt="Fresh Coffee"></a>
+                    <h2 class="scnd-ttl-pf">Fresh Coffee</h2>
+                    <p class="text-pf">Web Site</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
-        <p class="text">
+        <a href="./index.html" class="back-logo">Web<span class="back-logo">Studio</span></a>
+        <p class="back-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
 </body>
- 
+
 </html>
