--- a/index.html
+++ b/index.html
@@ -14,92 +14,98 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" class="link">Web<span class="logo-tree">Studio</span></a>
-            <ul class="list">
-                <li>
-                    <a href="./index.html" class="link">Studio</a>
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-logo link">Web<span>Studio</span></a>
+            <ul class="header-menu list">
+                <li class="header-menu-item">
+                    <a class="header-menu-link link" href="./index.html">Studio</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html" class="link">Portfolio</a>
+                <li class="header-menu-item">
+                    <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
                 </li>
-                <li>
-                    <a href="" class="link">Contacts</a>
+                <li class="header-menu-item">
+                    <a class="header-menu-link link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        <address class="contacts">
+            <ul class="contacts-item">
+                <li><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contacts-link link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section class="section">
-            <h1>Effective Solutions
+        <section id="home" class="main">
+            <h1 class="smm-ttl">Effective Solutions
                 for Your Business</h1>
-            <button type="button" class="Button-two">Order Service</button>
+            <button type="button" class="main-btn">Order Service</button>
         </section>
-        <section class="link">
-            <h2>Our advantages</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+        <section class="option">
+            <h2 hidden>Our advantages</h2>
+            <ul class="option-menu list">
+                <li class="list">
+                    <h3 class="thrd-ttl">Strategy</h3>
+                    <p class="item-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="thrd-ttl">Punctuality</h3>
+                    <p class="item-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="thrd-ttl">Diligence</h3>
+                    <p class="item-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="thrd-ttl">Technologies</h3>
+                    <p class="item-text">Design practice focused on digital experiences. We bring forth a deep passion
+                        for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>What are we doing</h2>
-            <ul>
+            <h2 class="scnd-ttl">What are we doing</h2>
+            <ul class="list">
                 <li><img src="./images/img1.jpg" width="360" height="300" alt="erorr"></li>
                 <li><img src="./images/img2.jpg" width="360" height="300" alt="erorr2"></li>
                 <li><img src="./images/img3.jpg" width="360" height="300" alt="erorr3"></li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li><img src="./images/img4.jpg" width="264" height="260" alt="photo Mark Guerrero">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="scnd-ttl">Our Team</h2>
+            <ul class="team-list list">
+                <li class="team-list-item ""><img src=" ./images/img4.jpg" width="264" height="260"
+                    alt="photo Mark Guerrero">
+                    <h3 class="thrd-ttl">Mark Guerrero</h3>
+                    <p class="item-text">Product Designer</p>
                 </li>
-                <li><img src="./images/img5.jpg" width="264" height="260" alt="photo Tom Ford">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-list-item "><img src="./images/img5.jpg" width="264" height="260" alt="photo Tom Ford">
+                    <h3 class="thrd-ttl">Tom Ford</h3>
+                    <p class="item-text">Frontend Developer</p>
                 </li>
-                <li> <img src="./images/img6.jpg" width="264" height="260" alt="photo Camila Garcia">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-list-item "> <img src="./images/img6.jpg" width="264" height="260"
+                        alt="photo Camila Garcia">
+                    <h3 class="thrd-ttl">Camila Garcia</h3>
+                    <p class="item-text">Marketing</p>
                 </li>
-                <li> <img src="./images/img7.jpg" width="264" height="260" alt=" photo Daniel Wilson">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="team-list-item "> <img src="./images/img7.jpg" width="264" height="260"
+                        alt=" photo Daniel Wilson">
+                    <h3 class="thrd-ttl">Daniel Wilson</h3>
+                    <p class="item-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="link">Web<span class="logo-four">Studio</span></a>
-        <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth
+        <a href="./index.html" class="back-logo" link>Web<span class="back-logo">Studio</span></a>
+        <p class="back-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
 
