--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="header-nav">
             <a href="./index.html" class="header-logo link">Web<span>Studio</span></a>
-            <ul class="header-menu list">
+            <ul class="list">
                 <li class="header-menu-item">
                     <a class="header-menu-link link" href="./index.html">Studio</a>
                 </li>
@@ -30,9 +30,11 @@
             </ul>
         </nav>
         <address class="contacts">
-            <ul class="contacts-item">
-                <li><a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="contacts-link link">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+                <li class="contacts-item"><a href="mailto:info@devstudio.com"
+                        class="contacts-link link">info@devstudio.com</a></li>
+                <li class="contacts-item"><a href="tel:+110001111111" class="contacts-link link">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
     </header>
@@ -104,7 +106,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="back-logo" link>Web<span class="back-logo">Studio</span></a>
+        <a href="./index.html" class="back-logo link" link>Web<span class="back-logo">Studio</span></a>
         <p class="back-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
