--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <nav id="header-nav">
-            <a href="./index.html" class="header-logo link">Web<span class="header-logo-span">Studio</span></a>
+            <a href="./index.html" class="header-logo">Web<span class="header-logo-span link">Studio</span></a>
             <ul class="header-menu">
                 <li class="header-menu-item">
                     <a href="./index.html" class="header-menu-link link">Studio</a>
