--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
 
 <body>
     <header class="header">
-        <nav id="header-nav">
-            <a href="./index.html" class="header-logo">Web<span class="header-logo-span link">Studio</span></a>
-            <ul class="header-menu">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-nav link">Web<span class="header-logo-span link">Studio</span></a>
+            <ul class="list">
                 <li class="header-menu-item">
                     <a href="./index.html" class="header-menu-link link">Studio</a>
                 </li>
@@ -107,7 +107,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="back-logo">Web<span class="back-logo">Studio</span></a>
+        <a href="./index.html" class="back-logo link">Web<span class="back-logo">Studio</span></a>
         <p class="back-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
