--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
 
 <body>
     <header class="header">
-        <nav class="header-nav">
-            <a href="./index.html" class="header-nav link">Web<span class="header-logo-span link">Studio</span></a>
+        <nav class="header-menu">
+            <a href="./index.html" class="header-menu link">Web<span class="header-logo-span link">Studio</span></a>
             <ul class="list">
                 <li class="header-menu-item">
                     <a href="./index.html" class="header-menu-link link">Studio</a>
