--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <nav class="header-menu">
-            <a href="./index.html" class="header-menu-link link ">Web<span class="header-logo-span">Studio</span></a>
+            <a href="./index.html" class="header-menu-link">Web<span class="header-logo link">Studio</span></a>
             <ul class="list">
                 <li class="header-menu-item">
                     <a href="./index.html" class="header-menu-link link">Studio</a>
