зрозумів де помилка

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,57 +51,66 @@
             <ul class="list">
                 <li>
                     <a href="" class="link"><img src="./images/portfolio1.jpg" width="360" height="300"
-                            alt="Banking App"></a>
-                    <h2 class="scnd-ttl-pf">Banking App Interface Concept</h2>
-                    <p class="text-pf">App</p>
+                            alt="Banking App" />
+                        <h2 class="scnd-ttl-pf">Banking App Interface Concept</h2>
+                        <p class="text-pf">App</p>
+                    </a>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio2.jpg" width="360" height="300"
-                            alt="Cashless Payment"></a>
-                    <h2 class="scnd-ttl-pf">Cashless Payment</h2>
-                    <p class="text-pf">Marketing</p>
+                            alt="Cashless Payment" />
+                        <h2 class="scnd-ttl-pf">Cashless Payment</h2>
+                        <p class="text-pf">Marketing</p>
+                    </a>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio3.jpg" width="360" height="300"
-                            alt="Meditation App"></a>
-                    <h2 class="scnd-ttl-pf">Meditation App</h2>
-                    <p class="text-pf">App</p>
+                            alt="Meditation App" />
+                        <h2 class="scnd-ttl-pf">Meditation App</h2>
+                        <p class="text-pf">App</p>
+                    </a>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio4.jpg" width="360" height="300"
-                            alt="Taxi Service"></a>
-                    <h2 class="scnd-ttl-pf">Taxi Service</h2>
-                    <p class="text-pf">Marketing</p>
+                            alt="Taxi Service" />
+                        <h2 class="scnd-ttl-pf">Taxi Service</h2>
+                        <p class="text-pf">Marketing</p>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio5.jpg" width="360" height="300"
-                            alt="Screen Illustrations"></a>
-                    <h2 class="scnd-ttl-pf">Screen Illustrations</h2>
-                    <p class="text-pf">Design</p>
+                            alt="Screen Illustrations" />
+                        <h2 class="scnd-ttl-pf">Screen Illustrations</h2>
+                        <p class="text-pf">Design</p>
+
+                    </a>
                 </li>
                 <li class="link">
                     <a href="" class="link"><img src="./images/portfolio6.jpg" width="360" height="300"
-                            alt="Online Courses"></a>
-                    <h2 class="scnd-ttl-pf">Online Courses</h2>
-                    <p class="text-pf">Marketing</p>
+                            alt="Online Courses" />
+                        <h2 class="scnd-ttl-pf">Online Courses</h2>
+                        <p class="text-pf">Marketing</p>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio7.jpg" width="360" height="300"
-                            alt="Instagram"></a>
-                    <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
-                    <p class="text-pf">Design</p>
+                            alt="Instagram" />
+                        <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
+                        <p class="text-pf">Design</p>
+
+                    </a>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio8.jpg" width="360" height="300"
-                            alt="Organic Food"></a>
-                    <h2 class="scnd-ttl-pf">Organic Food</h2>
-                    <p class="text-pf">Web Site</p>
+                            alt="Organic Food" />
+                        <h2 class="scnd-ttl-pf">Organic Food</h2>
+                        <p class="text-pf">Web Site</p>
+                    </a>
                 </li>
                 <li>
                     <a href="" class="link"><img src="./images/portfolio9.jpg" width="360" height="300"
-                            alt="Fresh Coffee"></a>
-                    <h2 class="scnd-ttl-pf">Fresh Coffee</h2>
-                    <p class="text-pf">Web Site</p>
+                            alt="Fresh Coffee" />
+                        <h2 class="scnd-ttl-pf">Fresh Coffee</h2>
+                        <p class="text-pf">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
