--- a/portfolio.html
+++ b/portfolio.html
@@ -50,34 +50,34 @@
             </ul>
             <ul class="list">
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio1.jpg" width="360" height="300"
-                            alt="Banking App" />
-                        <h2 class="scnd-ttl-pf">Banking App Interface Concept</h2>
+                    <a class="link" href="">
+                        <img src="./images/image1.jpg" alt="BankApp Interface" width="360" height="300" />
+                        <h2 class="scnd-ttl">Banking App Interface Concept</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio2.jpg" width="360" height="300"
-                            alt="Cashless Payment" />
+                    <a class="link" href="">
+                        <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" height="300" />
                         <h2 class="scnd-ttl-pf">Cashless Payment</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio3.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio3.jpg" width="360" height="300"
                             alt="Meditation App" />
                         <h2 class="scnd-ttl-pf">Meditation App</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio4.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio4.jpg" width="360" height="300"
                             alt="Taxi Service" />
                         <h2 class="scnd-ttl-pf">Taxi Service</h2>
                         <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio5.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio5.jpg" width="360" height="300"
                             alt="Screen Illustrations" />
                         <h2 class="scnd-ttl-pf">Screen Illustrations</h2>
                         <p class="text-pf">Design</p>
@@ -85,13 +85,13 @@
                     </a>
                 </li>
                 <li class="link">
-                    <a href="" class="link"><img src="./images/portfolio6.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio6.jpg" width="360" height="300"
                             alt="Online Courses" />
                         <h2 class="scnd-ttl-pf">Online Courses</h2>
                         <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio7.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio7.jpg" width="360" height="300"
                             alt="Instagram" />
                         <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
                         <p class="text-pf">Design</p>
@@ -99,14 +99,14 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio8.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio8.jpg" width="360" height="300"
                             alt="Organic Food" />
                         <h2 class="scnd-ttl-pf">Organic Food</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="link"><img src="./images/portfolio9.jpg" width="360" height="300"
+                    <a class="link" href=""><img src="./images/portfolio9.jpg" width="360" height="300"
                             alt="Fresh Coffee" />
                         <h2 class="scnd-ttl-pf">Fresh Coffee</h2>
                         <p class="text-pf">Web Site</p>
