--- a/portfolio.html
+++ b/portfolio.html
@@ -64,50 +64,50 @@
                     </a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio3.jpg" width="360" height="300"
-                            alt="Meditation App" />
+                    <a class="link" href=""><img src="./images/portfolio3.jpg" alt="Meditation App" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Meditation App</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio4.jpg" width="360" height="300"
-                            alt="Taxi Service" />
+                    <a class="link" href=""><img src="./images/portfolio4.jpg" alt="Taxi Service" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Taxi Service</h2>
                         <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio5.jpg" width="360" height="300"
-                            alt="Screen Illustrations" />
+                    <a class="link" href=""><img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Screen Illustrations</h2>
                         <p class="text-pf">Design</p>
 
                     </a>
                 </li>
                 <li class="link">
-                    <a class="link" href=""><img src="./images/portfolio6.jpg" width="360" height="300"
-                            alt="Online Courses" />
+                    <a class="link" href=""><img src="./images/portfolio6.jpg" alt="Online Courses" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Online Courses</h2>
                         <p class="text-pf">Marketing</p>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio7.jpg" width="360" height="300"
-                            alt="Instagram" />
+                    <a class="link" href=""><img src="./images/portfolio7.jpg" alt="Instagram" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
                         <p class="text-pf">Design</p>
 
                     </a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio8.jpg" width="360" height="300"
-                            alt="Organic Food" />
+                    <a class="link" href=""><img src="./images/portfolio8.jpg" alt="Organic Food" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Organic Food</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio9.jpg" width="360" height="300"
-                            alt="Fresh Coffee" />
+                    <a class="link" href=""><img src="./images/portfolio9.jpg" alt="Fresh Coffee" width="360"
+                            height="300" />
                         <h2 class="scnd-ttl-pf">Fresh Coffee</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
