--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <ul class="list">
                 <li>
                     <a class="link" href="">
-                        <img src="./images/image1.jpg" alt="BankApp Interface" width="360" height="300" />
+                        <img src="./images/portfolio1.jpg" alt="BankApp Interface" width="360" height="300" />
                         <h2 class="scnd-ttl">Banking App Interface Concept</h2>
                         <p class="text-pf">App</p>
                     </a>
@@ -96,6 +96,7 @@
                             height="300" />
                         <h2 class="scnd-ttl-pf">Instagram Stories Concept</h2>
                         <p class="text-pf">Design</p>
+
                     </a>
                 </li>
                 <li>
