--- a/portfolio.html
+++ b/portfolio.html
@@ -49,49 +49,49 @@
                 <li><button type="button" class="prtfl-btn">Marketing</button></li>
             </ul>
             <ul class="list">
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href="">
                         <img src="./images/portfolio1.jpg" alt="BankApp Interface" width="360" height="300" />
                         <h2 class="scond-ttl">Banking App Interface Concept</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href="">
                         <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" height="300" />
                         <h2 class="scond-ttl-pf">Cashless Payment</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio3.jpg" alt="Meditation App" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Meditation App</h2>
                         <p class="text-pf">App</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio4.jpg" alt="Taxi Service" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Taxi Service</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Screen Illustrations</h2>
                         <p class="text-pf">Design</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio6.jpg" alt="Online Courses" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Online Courses</h2>
                         <p class="text-pf">Marketing</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio7.jpg" alt="Instagram" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Instagram Stories Concept</h2>
@@ -99,14 +99,14 @@
 
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio8.jpg" alt="Organic Food" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Organic Food</h2>
                         <p class="text-pf">Web Site</p>
                     </a>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <a class="link" href=""><img src="./images/portfolio9.jpg" alt="Fresh Coffee" width="360"
                             height="300" />
                         <h2 class="scond-ttl-pf">Fresh Coffee</h2>
