--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="team">
             <h2 class="scnd-ttl">Our Team</h2>
             <ul class="team-list list">
-                <li class="team-list-item ""><img src=" ./images/img4.jpg" width="264" height="260"
+                <li class="team-list-item"><img src=" ./images/img4.jpg" width="264" height="260"
                     alt="photo Mark Guerrero">
                     <h3 class="thrd-ttl">Mark Guerrero</h3>
                     <p class="item-text">Product Designer</p>
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer class="back">
-        <a href="./index.html" class="back-logo link" link>Web<span class="back-logo">Studio</span></a>
+        <a href="./index.html" class="back-logo link">Web<span class="back-logo">Studio</span></a>
         <p class="back-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
